--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -46,6 +46,9 @@
     <string name="enable_line_wrap">naudoti eilutės perkėlimą</string>
     <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
 
+    <!-- Checklist -->
+    <string name="checklist">Checklist</string>
+
     <!-- Import / Export -->
     <string name="export_all_notes">Eksportuoti visus užrašus kaip bylas</string>
     <string name="import_notes">Importuoti keletą bylų, kaip užrašus</string>
