--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -46,6 +46,9 @@
     <string name="enable_line_wrap">Ativar quebra de linha</string>
     <string name="use_incognito_mode">Utilizar modo incógnito no teclado</string>
 
+    <!-- Checklist -->
+    <string name="checklist">Checklist</string>
+
     <!-- Import / Export -->
     <string name="export_all_notes">Exportar todas as notas como ficheiros</string>
     <string name="import_notes">Importar ficheiros para notas</string>
