--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -46,6 +46,9 @@
     <string name="enable_line_wrap">自動換行</string>
     <string name="use_incognito_mode">使用無痕模式的鍵盤</string>
 
+    <!-- Checklist -->
+    <string name="checklist">Checklist</string>
+
     <!-- Import / Export -->
     <string name="export_all_notes">將全部筆記匯出成檔案</string>
     <string name="import_notes">將多個檔案匯入成筆記</string>
