--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -46,8 +46,9 @@
     <string name="enable_line_wrap">Abilita a capo automatico</string>
     <string name="use_incognito_mode">Usa la modalità incognito per le tastiere</string>
 
-    <!-- Checklist -->
+    <!-- Checklists -->
     <string name="checklist">Checklist</string>
+    <string name="add_new_checklist_item">Add a new checklist item</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Esporta le note come file</string>
