--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -46,8 +46,9 @@
     <string name="enable_line_wrap">Sözcük kaydırmayı etkinleştir</string>
     <string name="use_incognito_mode">Klavyelerin Gizli modunu kullan</string>
 
-    <!-- Checklist -->
+    <!-- Checklists -->
     <string name="checklist">Checklist</string>
+    <string name="add_new_checklist_item">Add a new checklist item</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Tüm notları dosya olarak dışa aktar</string>
