--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -46,8 +46,9 @@
     <string name="enable_line_wrap">自動換行</string>
     <string name="use_incognito_mode">使用無痕模式的鍵盤</string>
 
-    <!-- Checklist -->
+    <!-- Checklists -->
     <string name="checklist">Checklist</string>
+    <string name="add_new_checklist_item">Add a new checklist item</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">將全部筆記匯出成檔案</string>
