--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -47,8 +47,8 @@
     <string name="use_incognito_mode">使用無痕模式的鍵盤</string>
 
     <!-- Checklists -->
-    <string name="checklist">Checklist</string>
-    <string name="add_new_checklist_item">Add a new checklist item</string>
+    <string name="checklist">核對清單</string>
+    <string name="add_new_checklist_item">新增新的核對清單項目</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">將全部筆記匯出成檔案</string>
