--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,6 +17,8 @@
     <string name="add_to_note">Добавить к заметке</string>
     <string name="unsaved_changes_warning">Есть несохраненные изменения. Что вы хотите с ними сделать?</string>
     <string name="note_shown_widget">Заметка, показываемая в виджете:</string>
+    <string name="new_note_type">New note type:</string>
+    <string name="text_note">Text note</string>
 
     <!-- File notes -->
     <string name="open_file">Открыть файл</string>
