--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -17,6 +17,8 @@
     <string name="add_to_note">添加到筆記</string>
     <string name="unsaved_changes_warning">你有一些尚未儲存的變更。你想對他們怎麼處理?</string>
     <string name="note_shown_widget">在小工具顯示的筆記:</string>
+    <string name="new_note_type">New note type:</string>
+    <string name="text_note">Text note</string>
 
     <!-- File notes -->
     <string name="open_file">打開檔案</string>
