adding a placeholder at empty checklists

--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -51,6 +51,7 @@
     <!-- Checklists -->
     <string name="checklist">Zoznam položiek</string>
     <string name="add_new_checklist_item">Pridať do zoznamu novú položku</string>
+    <string name="checklist_is_empty">Zoznam položiek je prázdny</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportovať všetky poznámky ako súbory</string>
