--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -51,6 +51,7 @@
     <!-- Checklists -->
     <string name="checklist">Checklist</string>
     <string name="add_new_checklist_item">Add a new checklist item</string>
+    <string name="checklist_is_empty">The checklist is empty</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Bütün qeydləri fayl şəklində çıxar</string>
