--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -51,6 +51,7 @@
     <!-- Checklists -->
     <string name="checklist">Checkliste</string>
     <string name="add_new_checklist_item">Einen neuen Checklisteneintrag hinzufügen</string>
+    <string name="add_new_checklist_items">Add new checklist items</string>
     <string name="checklist_is_empty">Die Checkliste ist leer</string>
 
     <!-- Import / Export -->
