--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -51,6 +51,7 @@
     <!-- Checklists -->
     <string name="checklist">Checklist</string>
     <string name="add_new_checklist_item">Nieuw item</string>
+    <string name="add_new_checklist_items">Add new checklist items</string>
     <string name="checklist_is_empty">De lijst is leeg</string>
 
     <!-- Import / Export -->
