Improve checklists translations

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -50,8 +50,8 @@
 
     <!-- Checklists -->
     <string name="checklist">Scaletta</string>
-    <string name="add_new_checklist_item">Aggiungi un nuovo elemento della scaletta</string>
-    <string name="add_new_checklist_items">Add new checklist items</string>
+    <string name="add_new_checklist_item">Aggiungi un nuovo elemento</string>
+    <string name="add_new_checklist_items">Aggiungi nuovi elementi</string>
     <string name="checklist_is_empty">La scaletta è vuota</string>
 
     <!-- Import / Export -->
