--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -51,7 +51,7 @@
     <!-- Checklists -->
     <string name="checklist">Lista de verificação</string>
     <string name="add_new_checklist_item">Adicionar item à lista de verificações</string>
-    <string name="add_new_checklist_items">Add new checklist items</string>
+    <string name="add_new_checklist_items">Adicionar itens à lista de verificação</string>
     <string name="checklist_is_empty">A lista está vazia</string>
 
     <!-- Import / Export -->
