--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -67,9 +67,9 @@
 
         Ви можете швидко прочитати нотатку з допомогою змінного віджета, який відкриває додаток одним натиском.
 
-        Без реклами і зайвих дозволів. З відкритим програмним кодом, є можливість додати індивідуальні кольори.
+        Цей додаток не буде показувати рекламу, потрібні лише найнеобхідніші дозволи. Додаток має повністю відкритий програмний код, кольори оформлення можна легко налаштувати.
 
-        Цей додаток є лише одним із ряду додатків. Ви знайдете інші за адресою https://www.simplemobiletools.com
+        Цей додаток є лише одним із ряду додатків від Simple Mobile Tools. Ви знайдете інші за адресою https://www.simplemobiletools.com
     </string>
 
     <!--
